# ugrep_fuzz

./: configure.ac
src/: Makefile.am
src/fuzz/: Makefile.am  fuzz_ugrep.cpp  target.cc
